// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Input AvecBordsColorés smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-error-1">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-error-1"
         placeholder="placeholder"
  >
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          style="color: rgb(245, 91, 91);"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input AvecIcone smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
  >
  <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] self-center min-w-[3rem] text-primary">
  </span>
</div>
`;

exports[`Design System/Input AvecIconeBouton smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
  >
  <button title="Rechercher"
          class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input AvecIconeTexte smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
  >
  <span class="self-center text-xs text-center font-bold min-w-[3rem] text-primary">
    TTC
  </span>
</div>
`;

exports[`Design System/Input AvecPlaceholder smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-md py-3"
         placeholder="Saisir une valeur"
         data-test="ok"
  >
</div>
`;

exports[`Design System/Input AvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-md py-3"
         value="plop"
  >
</div>
`;

exports[`Design System/Input Default smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-md py-3"
  >
</div>
`;

exports[`Design System/Input VarianteSmall smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-sm py-2"
         placeholder="placeholder"
  >
</div>
`;

exports[`Design System/Input VarianteSmallEtBouton smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-sm py-2 border-r border-solid border-grey-4"
         placeholder="placeholder"
  >
  <button title="Rechercher"
          class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-2.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input VarianteSmallIconeTexte smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="text-grey-8 px-4 outline-none text-sm py-2 border-r border-solid border-grey-4"
         placeholder="placeholder"
  >
  <span class="self-center text-xs text-center font-bold min-w-[3rem] text-primary">
    TTC
  </span>
</div>
`;
